--- a/NotificationServiceApi/NotificationServiceApi.csproj
+++ b/NotificationServiceApi/NotificationServiceApi.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.2.0" />
   </ItemGroup>
 
 </Project>
