--- a/NotificationServiceTests/NotificationServiceTests.csproj
+++ b/NotificationServiceTests/NotificationServiceTests.csproj
@@ -9,7 +9,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
+    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.2.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+    <PackageReference Include="Moq" Version="4.10.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.0.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NotificationServiceApi\NotificationServiceApi.csproj" />
   </ItemGroup>
 
 </Project>
